finish lab1