@@ -1,14 +1,20 @@
 package org.example.configuration;
 
 import lombok.SneakyThrows;
-import org.example.User.entity.User;
-import org.example.User.service.UserService;
+import org.example.user.entity.Gender;
+import org.example.user.entity.User;
+import org.example.user.service.UserService;
 
 import javax.enterprise.context.ApplicationScoped;
 import javax.enterprise.context.Initialized;
 import javax.enterprise.event.Observes;
 import javax.inject.Inject;
+import java.io.File;
 import java.io.InputStream;
+import java.net.URL;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.time.LocalDate;
 
 /**
@@ -47,19 +53,32 @@ public class InitializedData {
         User user1 = User.builder()
                 .id((long) 1)
                 .name("Adam")
+                .birthDate(LocalDate.of(1996,12,5))
+                .gender(Gender.MALE)
+                .avatar(getResourceAsByteArray("avatars/avatar4.png"))
                 .build();
         User user2 = User.builder()
                 .id((long) 2)
                 .name("Mateusz")
+                .gender(Gender.MALE)
+                .birthDate((LocalDate.of(1986,4,28)))
+                .avatar(getResourceAsByteArray("avatars/avatar3.png"))
                 .build();
         User user4 = User.builder()
                 .id((long) 3)
                 .name("Agata")
+                .birthDate((LocalDate.of(1993,6,13)))
+                .gender(Gender.FEMALE)
+                .avatar(getResourceAsByteArray("avatars/avatar2.png"))
                 .build();
         User user3 = User.builder()
                 .id((long) 4)
                 .name("Ania")
+                .birthDate((LocalDate.of(1999,10,2)))
+                .gender(Gender.FEMALE)
+                .avatar(getResourceAsByteArray("avatars/avatar1.png"))
                 .build();
+
         userService.create(user1);
         userService.create(user2);
         userService.create(user3);
@@ -67,15 +86,13 @@ public class InitializedData {
 
     }
 
-    /**
-     * @param name name of the desired resource
-     * @return array of bytes read from the resource
-     */
     @SneakyThrows
     private byte[] getResourceAsByteArray(String name) {
-        try (InputStream is = this.getClass().getResourceAsStream(name)) {
-            return is.readAllBytes();
-        }
+        URL resource = getClass().getClassLoader().getResource(name);
+        Path path = Paths.get(resource.getPath());
+        byte[] bytes = Files.readAllBytes(path);
+        return bytes;
+
     }
 
 }
